@startuml
skinparam dpi 200
skinparam backgroundColor transparent
skinparam defaultFontName Helvetica
skinparam defaultFontSize 13
skinparam roundcorner 8
skinparam shadowing false
skinparam class {
  BorderColor #4F46E5
  BorderThickness 1.2
  BackgroundColor #EEF2FF
  FontColor #1E1B4B
  ArrowColor #4F46E5
  ArrowFontColor #312E81
  ArrowFontSize 11
  HeaderBackgroundColor #4F46E5
  FontSize 12
}
hide circle
hide empty members

class Department {
  +Name
}
class UserAccount {
  +Email
  +Role
  +DepartmentId
  +IsActive
}
class Employee {
  +EmployeeNumber
  +JobTitle
  +ContractType
  +DepartmentId
}
class WorkflowTemplate {
  +Type
  +Status
  +AuthorId / VerifierId / ApproverId
}
class TemplateSection {
  +Name
  +Order
}
class TemplateItem {
  +Label
  +ApplicableContractTypes
}
class WorkflowInstance {
  +Type
  +Status
  +ClosureDate
}
class ChecklistItemStatus {
  +Status
  +CheckedBy / CheckedDate
}

Department "1" -- "0..*" Employee
Department "1" -- "0..*" UserAccount
UserAccount "0..1" -- "0..1" Employee : compte lié
Employee "1" -- "0..*" WorkflowInstance
WorkflowTemplate "1" *-- "1..*" TemplateSection
TemplateSection "1" *-- "1..*" TemplateItem
WorkflowTemplate "1" -- "0..*" WorkflowInstance : modèle de
WorkflowInstance "1" *-- "1..*" ChecklistItemStatus

note right of WorkflowTemplate
  Seul un template **Approved**
  peut être instancié.
end note
note bottom of ChecklistItemStatus
  Etat initial **Pending**,
  puis **Done** ou **Failed**.
end note
@enduml
